# urlshortener

./: .gitignore  Cargo.toml  README.md  wrangler.toml
scripts/: urlshortener
src/: auth.rs  lib.rs
