[package]
name = "urlshortener-worker"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
jwt-compact = { version = "0.5", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
worker = "0.0"

[profile.release]
opt-level = "s"
